--- a/backend/src/main/resources/db/changelog/31-08-2022/create-table-projects.yaml
+++ b/backend/src/main/resources/db/changelog/31-08-2022/create-table-projects.yaml
@@ -25,6 +25,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: description
+                  remarks: Описание
                   type: varchar(50)
                   constraints:
-                    nullable: true
+                    nullable: false
