--- a/backend/src/main/resources/liquibase.yaml
+++ b/backend/src/main/resources/liquibase.yaml
@@ -1,5 +1,3 @@
-url=jdbc:h2:file:~/taskorganizer
-username=sa
-password=sa
-driver=org.h2.Driver
-outputChangeLogFile=src/main/resources/liquibase-outputChangeLog.xml
+url: jdbc:h2:~/taskorganizer
+username: sa
+password: sa
