--- a/backend/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -1,3 +1,3 @@
 databaseChangeLog:
-  - include:
-      file:db/changelog/create-table-projects.yaml
+  - includeAll:
+      path: src/main/resources/db/changelog/31-08-2022/
